adding text to each of our divs

--- a/jQuery_demo.html
+++ b/jQuery_demo.html
@@ -15,16 +15,16 @@
     </script>
 </head>
 <body>
-    <div class="fadeIn"></div>
+    <div class="fadeIn">fade in</div>
     <hr>
-    <div class="fadeOut"></div>
+    <div class="fadeOut">fade out</div>
     <hr>
-    <div class="addClass"></div>
+    <div class="addClass">add class</div>
     <hr>
-    <div class="before"></div>
+    <div class="before">before</div>
     <hr>
-    <div class="after"></div>
+    <div class="after">after</div>
     <hr>
-    <div class="append"></div>
+    <div class="append">append</div>
 </body>
 </html>
