--- a/jQuery_demo.html
+++ b/jQuery_demo.html
@@ -26,5 +26,6 @@
     <div class="after">after</div>
     <hr>
     <div class="append">append</div>
+    <div >this is feature 2 stuff</div>
 </body>
 </html>
